<resources>
    <string name="app_name">Carpool Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_open_vehicles">OpenVehiclesActivity</string>
    <string name="title_activity_vehicle_profile">VehicleProfileActivity</string>
    <string name="title_activity_open_vehicle">OpenVehicleActivity</string>
    <string name="your_passengers">Your Passengers</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="your_vehicles">Your Vehicles</string>
    <string name="other_passengers">Other Passengers</string>
    <string name="book_a_ride">Book a Ride</string>
    <string name="profileButton">profileButton</string>
    <string name="open_your_car">Open Your Car</string>
    <string name="sign_out">Sign out</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="submit_ratings">Submit Ratings</string>
    <string name="rate_your_passengers">Rate Your Passengers!</string>
    <string name="rate_your_driver">Rate Your Driver!</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="sign_in">Sign In</string>
    <string name="cis_carpool_buddy">CIS Carpool Buddy</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="sign_in_heading">Sign In:</string>
    <string name="sign_up_heading">Sign Up:</string>
    <string name="name">Name:</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="alumni">Alumni</string>
    <string name="parent">Parent</string>
    <string name="available_vehicles">Available Vehicles</string>
    <string name="deleteVehicle">deleteVehicle</string>
    <string name="driver">Driver:</string>
    <string name="vehicle">Vehicle:</string>
    <string name="book_vehicle">Book Vehicle</string>
    <string name="close_car_and_start_ride">Close Car and Start Ride</string>
    <string name="refreshButton">refreshButton</string>
    <string name="addVehicle">Add Vehicle:</string>
</resources>